Fixed video on mobile

--- a/styles.css
+++ b/styles.css
@@ -86,20 +86,28 @@
     .menu{
     transform: scale(0.5);
     margin-right: 10px;
-    border: 2px purple dashed;
-    padding:  ;
     }
     .video{
-
+      position: relative;
+      display: flex;
+      padding-bottom: 56.25%;
+    }
+    #ytvideo{
+     position: absolute;
+     width: 100%;
+     height: 100%; 
     }
     .header{
       justify-content: center;
+      text-align: center;
       display: flex;
-      margin-top: 5px;
-      margin-bottom: ;
+      margin-top: 2px;
     }
     .text{
       padding: 20px;
+      padding-top: 5px;
+      padding-bottom: 2px;
+    
       text-align: center;
     }
 }   
